# nurbs-lab

./: .gitignore  CMakeLists.txt  CMakePresets.json
plots/: plot_basis.py  plot_surface.py
plots/data/: basis.csv  ctrl_net.xyz  surface.csv  tsurface.xyz
src/: bspline_basis.cpp  bspline_basis.hpp  bspline_curve.cpp  bspline_curve.hpp  bspline_curve_builder.hpp  bspline_curve_sample.cpp  bspline_curve_stress.cpp  bspline_surface.cpp  bspline_surface.hpp  bspline_surface_bowl.cpp  bspline_surface_builder.hpp  bspline_surface_cylinder.cpp  bspline_surface_plane.cpp  bspline_surface_sphere.cpp  circle_curve.cpp  circle_curve.hpp  closest_point_result.hpp  line_curve.hpp  main.cpp  math_utils.cpp  math_utils.hpp  nurbs_curve.cpp  nurbs_curve.hpp  nurbs_curve_builder.hpp  nurbs_curve_circle.cpp  nurbs_curve_cubic_circle.cpp  nurbs_curve_periodic_circle.cpp  parametric_curve.cpp  parametric_curve.hpp  parametric_surface.cpp  parametric_surface.hpp  surface_curvature.hpp  surface_differential.hpp  surface_frame.hpp  test_closest_point.cpp  test_closest_point.hpp
tests/: CMakeLists.txt  test_basis.cpp  test_closest_point.cpp  test_closest_point_curve.cpp  test_curve.cpp  test_sphere_curvature.cpp  test_surface.cpp
